# Class_Up

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start_mock.bat
.agents/: PROGRESS.md  README_中文.md  RULES.md  architecture-decisions.yaml  profile.yaml
.agents/progress/entries/2026/: 2026-05-18-1.md  2026-05-18-10.md  2026-05-18-11.md  2026-05-18-2.md  2026-05-18-3.md  2026-05-18-4.md  (+16 more)
config/: README_中文.md  config.example.yaml
docs/: README_中文.md  SFTP上传截断故障沉淀.md  分层清理策略沉淀.md  前端规格.md  开发目标.md  开发计划.md  数据协议.md
docs/M1开发阶段/: M1阶段开发计划.md  豆包录音识别接入协议.md
docs/api/豆包语音识别/: 新版控制台示例代码  豆包大模型录音文件识别标准版API
docs/api/阿里千问语音识别/: 录音文件识别
examples/: README_中文.md
scripts/: README_中文.md  check_sftp_connection.py
src/: README_中文.md
src/class_up/: __init__.py  cleanup.py  cli.py  config.py  manifest.py
src/class_up/api/: app.py  jobs.py
src/class_up/media/: audio.py  ffmpeg.py
src/class_up/transcription/: __init__.py  base.py  doubao.py  merge.py  service.py  srt.py
src/class_up/upload/: __init__.py  base.py  sftp.py
src/class_up/utils/: filesystem.py  timecode.py
static/: index.html
tests/: README_中文.md
tests/integration/: test_m1_mock_pipeline.py
tests/unit/: test_api_key_persistence.py  test_audio_timeline.py  test_cleanup.py  test_cleanup_api.py  test_cli.py  test_doubao_network_retry.py  test_doubao_transcription.py  test_ffmpeg_paths.py  test_m1_cache.py  test_manifest.py  test_sftp_upload.py  test_srt.py  test_timecode.py  test_transcription_merge.py  test_transcription_retry.py  test_web_config.py
tools/: README_中文.md
